--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+     <meta charset="UTF-8">
+     <title>FlaskBlog</title>
+  </head>
+<body>
+   <input type="text" name="a">
 
+   <h1>{{s}}</h1>
+   <h2>Walcame</h2>
+   <td><img src="{{m}}"></td>
+</body>
+</html>
